--- a/Extracurricular Activity Finder v6.0.ipynb
+++ b/Extracurricular Activity Finder v6.0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3d2496fc",
    "metadata": {},
    "outputs": [
@@ -14,22 +14,23 @@
       "This was created by Shaurya, Andrew, Aveeshay and Ethan of 12 Science J, IHS '26 as part of our AI Capstone Project.\n",
       "\n",
       "Enter your interests (comma separated, preferably single or hyphenated words):\n",
-      "music, playing guitar, listening, reading, movies, swimming\n",
-      "Enter your skills (comma separated, preferable single or hyphenated words):\n",
-      "teamwork, creativity, problem-solving, leadership, collaboration\n",
-      "Warning: 'listening' not recognized and ignored.\n",
+      "music, guitar, reading, movies, badminton\n",
       "\n",
-      "Recommended activities:\n",
-      "- Music Band (score: 0.451)\n",
-      "- Math Club (score: 0.220)\n",
-      "- Entrepreneurship Club (score: 0.207)\n",
-      "- Film Club (score: 0.205)\n",
-      "- Coding Club (score: 0.152)\n",
+      "Enter your skills (comma separated, preferably single or hyphenated words):\n",
+      "teamwork, creativity, problem-solving, collaboration\n",
+      "Warning: 'badminton' not recognized and ignored.\n",
+      "\n",
+      " Recommended activities for you:\n",
+      "- Music Band (match score: 0.33) → Matched tags: guitar, music, collaboration, creativity, teamwork\n",
+      "- Math Club (match score: 0.26) → Matched tags: problem-solving\n",
+      "- Film Club (match score: 0.24) → Matched tags: movies, music\n",
+      "- Coding Club (match score: 0.18) → Matched tags: problem-solving, creativity, teamwork\n",
+      "- Model UN (match score: 0.18) → Matched tags: problem-solving\n",
       "\n",
       "Thank you for using our program! Here's some free tips: \n",
-      "TIP: Joining activities helps build teamwork and leadership skills!\n",
       "TIP: Participating in clubs can improve your college and job applications.\n",
-      "TIP: You could ask your seniors and teachers for more information!\n"
+      "TIP: Regular involvement helps with time management and responsibility.\n",
+      "TIP: Joining activities helps build teamwork and leadership skills!\n"
      ]
     }
    ],
@@ -38,6 +39,7 @@
     "#PATCH NOTES:\n",
     "#1. Added tips for students\n",
     "#2. Added warnings for incorrect inputs\n",
+    "#3. Added matching tags\n",
     "\n",
     "\n",
     "import difflib\n",
@@ -125,15 +127,15 @@
     "    top_indices = similarity_scores.argsort()[::-1][:top_n]\n",
     "\n",
     "    recommendations = []\n",
-    "    for idx in top_indices:   \n",
-    "        score = similarity_scores[idx]    #This was to get the score of the activity, which is the similarity score between the user's input and the activity's tags.\n",
+    "    for idx in top_indices:\n",
+    "        score = similarity_scores[idx]\n",
     "        if score > 0:\n",
-    "            recommendations.append((activities[idx][\"name\"], score))  \n",
+    "            # Identify overlapping tags\n",
+    "            matched_tags = list(set(activities[idx][\"tags\"]) & set(input_tags))\n",
+    "            explanation = f\"Matched tags: {', '.join(matched_tags)}\"\n",
+    "            recommendations.append((activities[idx][\"name\"], score, explanation))\n",
     "\n",
-    "    if not recommendations:\n",
-    "        return \"No matching activities found based on your input.\"\n",
-    "\n",
-    "    return recommendations\n",
+    "    return recommendations, input_tags\n",
     "\n",
     "def print_tips():\n",
     "    tips = [\n",
@@ -157,30 +159,26 @@
     "    print(\"\\nEnter your interests (comma separated, preferably single or hyphenated words):\")\n",
     "    interests = input()\n",
     "    print(interests)\n",
-    "    print(\"Enter your skills (comma separated, preferable single or hyphenated words):\")\n",
+    "    print(\"\\nEnter your skills (comma separated, preferably single or hyphenated words):\")\n",
     "    skills = input()\n",
     "    print(skills)\n",
     "\n",
-    "    results = recommend_activities(interests, skills)\n",
+    "    results, used_tags = recommend_activities(interests, skills)\n",
     "\n",
-    "    if isinstance(results, str):\n",
-    "        print(results)\n",
+    "    if results:\n",
+    "        print(\"\\n Recommended activities for you:\")\n",
+    "        for name, score, explanation in results:\n",
+    "            print(f\"- {name} (match score: {score:.2f}) → {explanation}\")\n",
     "    else:\n",
-    "        print(\"\\nRecommended activities:\")\n",
-    "        for name, score in results:\n",
-    "            print(f\"- {name} (score: {score:.3f})\")  \n",
-    "            #The score here is the similarity score between the user's input and the activity's tags.\n",
-    "    print_tips()    \n",
+    "        print(\"\\nWe couldn't find a strong match.\")\n",
+    "        print(\"Here's a universally beneficial activity to consider:\")\n",
+    "        print(\"- Book Club or Volunteering Club (Great for building soft skills, communication, and empathy).\")\n",
+    "        if not used_tags:\n",
+    "            print(\"Tip: Try using clearer keywords like 'teamwork', 'creativity', or 'public speaking'.\")\n",
+    "\n",
+    "    print_tips()\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b91a1df",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
